# aresitos

./: .gitattributes  .gitconfig-case-sensitivity  .gitignore  .pylintrc  ARESITOS_MEJORAS_COMPLETADAS.md  ATTRIBUTION_EXAMPLE.md  CERTIFICACION_SISTEMA_CONFIGURACION.md  CHANGELOG.md  CONFIGURACION.md  ESTRUCTURA_PROYECTO.md  FIXES_REALIZADOS.md  GUIA_INSTALACION.md  LICENSE  OPTIMIZACION_ARESITOS_V3_RESUMEN.md  OPTIMIZACION_COMPONENTES.md  OPTIMIZACION_COMPONENTES_COMPLETADA.md  PLAN_OPTIMIZACION_KALI.md  README.md  README_backup.md  README_old.md  README_old_duplicated.md  RELEASE_NOTES.md  REPORTE_PROBLEMAS_RESUELTOS.md  RESUMEN_ACTUALIZACION_GITHUB.md  SOLUCION_CASE_SENSITIVITY.md  Seguridad.md  VERIFICACION_OPTIMIZACION_KALI.py  clean.bat  clean.sh  configurar_actualizador.sh  configurar_kali.sh  diagnostico.py  eliminar_emojis.py  erradicar_emojis_total.py  fix_emojis.py  main.py  pyproject.toml  renombrar_aresitos_a_minusculas.py  reporte_herramientas_windows.txt  reporte_renombramiento_20250824_013638.txt  (+9 more)
Aresitos/controlador/: __init__.py  controlador_auditoria.py  controlador_base.py  controlador_componentes.py  controlador_configuracion.py  controlador_cuarentena.py  controlador_dashboard.py  controlador_escaneador.py  controlador_escaneador_avanzado_kali2025.py  controlador_escaneador_cuarentena.py  controlador_escaneo.py  controlador_escaneo_cuarentena.py  controlador_fim.py  controlador_gestor_componentes.py  controlador_herramientas.py  controlador_monitoreo.py  controlador_principal.py  controlador_principal_base.py  controlador_principal_nuevo.py  controlador_reportes.py  controlador_siem.py  controlador_siem_nuevo.py
Aresitos/modelo/: __init__.py  modelo_cuarentena.py  modelo_cuarentena_kali2025.py  modelo_dashboard.py  modelo_escaneador.py  modelo_escaneador_avanzado.py  modelo_escaneador_avanzado_kali2025.py  modelo_escaneador_avanzado_real.py  modelo_escaneador_kali2025.py  modelo_escaneador_red.py  modelo_escaneador_sistema.py  modelo_fim.py  modelo_fim_kali2025.py  modelo_gestor_wordlists.py  modelo_monitor.py  modelo_principal.py  modelo_reportes_backup.py  modelo_siem.py  modelo_siem_kali2025.py  modelo_wordlists_gestor.py
Aresitos/utils/: __init__.py  detector_red.py  gestor_iconos.py  helper_seguridad.py  sanitizador_archivos.py  seguridad_comandos.py  verificacion_permisos.py  verificar_kali.py
Aresitos/vista/: __init__.py  vista_auditoria.py  vista_dashboard.py  vista_datos.py  vista_escaneador.py  vista_escaneo.py  vista_fim.py  vista_fim_kali2025.py  vista_gestion_datos.py  vista_herramientas.py  vista_herramientas_kali.py  vista_login.py  vista_monitoreo.py  vista_principal.py  vista_reportes.py  vista_siem.py
ares_aegis/controlador/: __init__.py  controlador_auditoria.py  controlador_base.py  controlador_dashboard.py  controlador_diccionarios.py  controlador_escaneo.py  controlador_fim.py  controlador_herramientas.py  controlador_monitoreo.py  controlador_principal.py  controlador_reportes.py  controlador_siem.py  controlador_utilidades.py  controlador_wordlists.py  gestor_configuracion.py
ares_aegis/modelo/: __init__.py  cuarentena.py  escaneador.py  gestor_diccionarios.py  gestor_wordlists.py  modelo_auditoria.py  modelo_escaneador.py  modelo_fim.py  modelo_gestor_diccionarios.py  modelo_gestor_wordlists.py  modelo_monitor.py  modelo_principal.py  modelo_reportes.py  modelo_siem.py  modelo_utilidades_sistema.py  monitor.py  reportes.py  siem.py  utilidades.py
ares_aegis/utils/: gestor_permisos.py
ares_aegis/vista/: __init__.py  burp_theme.py  vista_auditoria.py  vista_dashboard.py  vista_diccionarios.py  vista_escaneo.py  vista_fim.py  vista_gestion_datos.py  vista_herramientas.py  vista_monitoreo.py  vista_principal.py  vista_reportes.py  vista_siem.py  vista_utilidades.py  vista_wordlists.py
aresitos/: __init__.py
aresitos/controlador/: __init__.py  controlador_actualizacion.py  controlador_auditoria.py  controlador_base.py  controlador_componentes.py  controlador_configuracion.py  controlador_cuarentena.py  controlador_dashboard.py  controlador_diccionarios.py  controlador_escaneador_cuarentena.py  controlador_escaneo.py  controlador_fim.py  (+15 more)
configuracion/: MAPA_NAVEGACION_ESCANEADOR.md  aresitos_config.json  aresitos_config_kali.json  textos_castellano_corregido.json
configuración/: Aresitos_config_kali.json  MAPA_NAVEGACION_ESCANEADOR.md  aresitos_config.json  aresitos_config_backup.json  aresitos_config_completo.json  aresitos_config_kali.json  textos_castellano_corregido.json
controlador/: controlador_mantenimiento.py
data/: cuarentena_kali2025.db  fim_database.json  fim_kali2025.db  siem_aresitos.db  siem_kali2025.db  vulnerability_database.json
documentacion/: AJUSTE_REQUISITOS_ESPACIO.md  ARQUITECTURA_DESARROLLO.md  ARQUITECTURA_LIMPIA_v3.md  AUDITORIA_SEGURIDAD_ARESITOS.md  AUDITORIA_SEGURIDAD_FINAL.md  AUDITORIA_SEGURIDAD_LOGIN.md  BETA_12_CHANGELOG.md  CORRECCIONES_SEGURIDAD_TECNICAS.md  DOCUMENTACION_TECNICA_CONSOLIDADA.md  EXITO_HISTORICO_FINAL.md  FASE_3_EXPANSIONES_AVANZADAS.md  FAVICON_SYSTEM.md  GUIA_INSTALACION.md  GUIA_TECNICA_ARESITOS.md  HERRAMIENTAS_FASE_3_ACTUALIZACION.md  INDICE_MAESTRO_DOCUMENTACION.md  INTEGRACION_KALI_2025_COMPLETA.md  MEJORAS_CRIPTOGRAFICAS_DETALLADAS.md  MEJORES_PRACTICAS_INSTALACION.md  MISION_COMPLETADA.md  README.md  REPORTE_CORRECCIONES_FINAL.md  REPORTE_CORRECCIONES_FINALES.md  REPORTE_CORRECCIONES_SEGURIDAD_FINAL.md  RESUMEN_EJECUTIVO_SEGURIDAD.md  REVISION_COMPLETA_SISTEMA.md  REVISION_MVC_ARESITOS.md  SANITIZACION_ARCHIVOS.md  SIEM_OPTIMIZATION_SUMMARY.md  SOLUCION_FAVICON_KALI.md  TERMINAL_INTEGRADO.md  auditoria_seguridad.md
logs/: .gitkeep
modelo/: modelo_mantenimiento.py
tests/: conftest.py  run_tests.py  test_controladores.py  test_cuarentena.py  test_escaneador.py  test_herramientas_controller.py  test_integracion.py  test_login_flow.py  test_monitor.py  test_reportes.py  test_sudo_manager.py  test_utilidades.py  test_wordlists_diccionarios.py
tools/: compare_tools.py
utils/: mantenimiento_utils.py
vista/: __init__.py  vista_mantenimiento.py
(+178 files in other folders)
