# ===================================================================
# ARESITOS v2.0 - CONFIGURACIÓN DEL PROYECTO
# Suite de Ciberseguridad NATIVA para Kali Linux - ZERO DEPENDENCIAS
# ===================================================================

[project]
name = "aresitos"
version = "2.0.0"
description = "Suite de ciberseguridad profesional para Kali Linux con arquitectura 100% nativa - escaneador, FIM, SIEM, auditoria y deteccion malware usando solo Python stdlib + herramientas Kali"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DogSoulDev", email = "dogsouldev@protonmail.com"}
]
maintainers = [
    {name = "DogSoulDev", email = "dogsouldev@protonmail.com"}
]
keywords = [
    "cybersecurity", "vulnerability-scanner", "kali-linux", 
    "siem", "fim", "security-audit", "penetration-testing",
    "network-security", "malware-detection", "security-monitoring",
    "native-python", "zero-dependencies", "stdlib-only",
    "linux-commands", "kali-tools", "rootkit-detection",
    "intrusion-detection", "security-assessment"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: GTK",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring :: Hardware Watchdog",
    "Topic :: System :: Systems Administration",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
# ===================================================================
# ARQUITECTURA NATIVA - ZERO DEPENDENCIAS DE PRODUCCION
# ===================================================================
# ARESITOS v2.0 NO requiere dependencias para funcionar
# Solo utiliza Python stdlib + herramientas Kali Linux nativas
# 
# INSTALACION DIRECTA:
# git clone <repo> && cd Ares-Aegis && python3 main.py
# ===================================================================

# Dependencias SOLO para desarrollo (opcionales)
dev = [
    "black>=23.0.0",
    "isort>=5.12.0", 
    "pylint>=2.17.0",
    "mypy>=1.4.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0"
]

# Dependencias SOLO para documentacion (opcionales)
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.3.0"
]

# ===================================================================
# HERRAMIENTAS KALI LINUX REQUERIDAS (VIA SUBPROCESS)
# ===================================================================
# ARESITOS integra herramientas Kali via subprocess.run():
# 
# ESCANEO: nmap, rustscan, masscan, nikto, gobuster, feroxbuster, httpx, nuclei, sqlmap
# MALWARE: linpeas, pspy, chkrootkit 
# AUDITORIA: lynis, linpeas, pspy, systemctl
# MONITOREO: ss, lsof, tcpdump, iftop, ps, top
# LOGS: tail, grep, awk, sed, find
# SISTEMA: df, du, free, uptime, ping, curl
# 
# COMANDO INSTALACION MODERNA:
# sudo apt install nmap rustscan masscan nikto gobuster feroxbuster httpx nuclei sqlmap \
#   chkrootkit lynis binwalk exiftool \
#   tcpdump iftop htop curl wget inotify-tools
# ===================================================================

[project.urls]
Homepage = "https://github.com/DogSoulDev/Aresitos"
Documentation = "https://github.com/DogSoulDev/Aresitos/blob/master/README.md"
Repository = "https://github.com/DogSoulDev/Aresitos.git"
"Bug Tracker" = "https://github.com/DogSoulDev/Aresitos/issues"
Changelog = "https://github.com/DogSoulDev/Aresitos/blob/master/CHANGELOG.md"
"Security Policy" = "https://github.com/DogSoulDev/Aresitos/blob/master/SECURITY.md"
"Architecture" = "https://github.com/DogSoulDev/Aresitos/blob/master/documentacion/desarrollo/ARQUITECTURA_NATIVA.md"

[project.scripts]
aresitos = "main:main"
aresitos-scanner = "aresitos.controlador.controlador_escaneo:main"
aresitos-fim = "aresitos.controlador.controlador_fim:main"
aresitos-siem = "aresitos.controlador.controlador_siem_nuevo:main"
aresitos-dashboard = "aresitos.controlador.controlador_dashboard:main"

# ===================================================================
# HERRAMIENTAS DE DESARROLLO
# ===================================================================

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    # directorios
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytest_cache
    | _build
    | buck-out
    | build
    | dist
    | logs
    | data/reportes
    | data/temp
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
skip_gitignore = true
known_first_party = ["aresitos"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = ["LOCALFOLDER"]

[tool.pylint.main]
load-plugins = ["pylint.extensions.code_style", "pylint.extensions.typing"]
extension-pkg-whitelist = ["tkinter", "subprocess"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring", 
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-locals",
    "invalid-name",
    "global-statement",
    "broad-except",
    "import-outside-toplevel"
]

[tool.pylint.format]
max-line-length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests", "aresitos/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test", "*Tests"]
python_functions = ["test_*"]
addopts = [
    "--no-cov",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "kali: marks tests that require Kali Linux environment"
]

[tool.coverage.run]
source = ["aresitos"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError", 
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

# ===================================================================
# CONFIGURACIÓN DE BUILD
# ===================================================================

[build-system]
requires = [
    "setuptools>=65.0.0",
    "wheel>=0.37.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aresitos"]
include-package-data = true

[tool.setuptools.package-data]
aresitos = [
    "recursos/*.ico",
    "recursos/cheatsheets/*.md",
    "configuracion/*.json"
]
